--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
     "node-sass": "^4.9.0",
+    "rty-el-table": "^1.0.18",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
